# open4dhoi_code

./: .gitignore  INSTALL.md  README.md
4dhoi_annotator/: .gitignore  README.md  app.py  config.yaml  geometry.py  ivd_predictor.py  requirements.txt
4dhoi_annotator/asset/data/: button_name.json  joint_tree.json  main_joint.json
4dhoi_annotator/solver/: config.py  hoi_solver.py  kp_common.py  kp_use_new.py  optimizer_part.py
4dhoi_annotator/solver/configs/: optimizer.yaml
4dhoi_annotator/solver/utils/: dataset_util.py  icppnp.py  loss_utils.py  parameter_transform.py
4dhoi_annotator/static/css/: style.css  style_extra.css
4dhoi_annotator/static/js/: main.js
4dhoi_annotator/templates/: index.html
data_preparer/: .gitignore  README.md  app.py
data_preparer/static/css/: style.css
data_preparer/static/js/: app.js
data_preparer/templates/: index.html
hoi_solver/: .gitignore  README.md  convert_annotations.py  convert_params.py  make_obj_init.py  optimize.py  render.py  run.sh  run_optimize.sh  run_render.sh
hoi_solver/neural_renderer/neural_renderer/: renderer.py
hoi_solver/video_optimizer/: config.py  hoi_solver.py  kp_common.py  kp_use_new.py  optimizer_part.py
hoi_solver/video_optimizer/configs/: optimizer.yaml
hoi_solver/video_optimizer/data/: joint_sim.json  smplh_part_kp.json
interpoint/: .gitignore  README.md  evaluate.sh  pyproject.toml  requirements.txt  train.sh
interpoint/configs/: default.yaml
interpoint/data/: __init__.py  dataset.py  dataset_4dhoi.py  part_kp.json  transforms.py
interpoint/models/: __init__.py  branch_decoder.py  dino_encoder.py  index_objective.py  interaction_transformer.py  ivd_model.py  losses.py  pointnet2.py  pointnet2_decoder.py  pointnet2_encoder.py  vlm_module.py
interpoint/scripts/: evaluate_4dhoi_new.py  fixed_split_utils.py  train_4dhoi.py
interpoint/utils/: __init__.py  keypoints.py  metrics.py
preprocessing/: .gitignore  README.md  config.sh  run_pipeline.sh  setup_third_party.sh  step1_frames_masks_obj.sh  step2_motion_depth.sh  step3_hand.sh  step4_hoi.sh
preprocessing/scripts/: hoi_utils.py  make_depth.py  make_extract_frames.py  make_hand_sam3d.py  make_hoi.py  make_masks.py  make_motion.py  make_obj_org.py  task_status.py
shared_data/: part_kp.json
(+10 files in other folders)
